# plasma-workspace

./: CMakeLists.txt
appiumtests/: CMakeLists.txt  kcm_nightlight_test.py
applets/appmenu/plugin/: appmenuplugin.cpp
applets/batterymonitor/package/contents/ui/: BrightnessItem.qml  CompactRepresentation.qml  InhibitionHint.qml  PopupDialog.qml  PowerManagementItem.qml  PowerProfileItem.qml  main.qml
applets/brightness/: CMakeLists.txt
applets/brightness/package/: metadata.json
applets/brightness/package/contents/ui/: CompactRepresentation.qml  KeyboardColorItem.qml  NightColorItem.qml  NightLightItem.qml  PopupDialog.qml  main.qml
applets/brightness/plugin/: CMakeLists.txt  keyboardcolorcontrol.cpp  keyboardcolorcontrol.h  nightcolormonitor.cpp  nightcolormonitor.h  nightcolormonitor_p.h  nightcolorplugin.cpp  nightlightinhibitor.cpp  nightlightinhibitor.h  nightlightmonitor.cpp  nightlightmonitor.h  plugin.cpp
applets/clipboard/contents/ui/: EditPage.qml
applets/digital-clock/package/contents/ui/: CalendarView.qml
applets/digital-clock/plugin/: digitalclockplugin.cpp
applets/kicker/plugin/: kastatsfavoritesmodel.cpp  kickerplugin.cpp
applets/mediacontroller/package/contents/ui/: ConfigGeneral.qml  main.qml
applets/mediacontroller/plugin/: mediacontrollerplugin.cpp  playerhistorymodel.cpp
components/calendar/: calendarplugin.cpp  eventpluginsmanager.cpp
components/calendar/qml/: DayDelegate.qml  InfiniteList.qml  MonthView.qml
components/containmentlayoutmanager/: containmentlayoutmanagerplugin.cpp
components/shellprivate/widgetexplorer/: widgetexplorer.cpp
dataengines/notifications/: notificationsengine.cpp  notificationsengine.cpp.orig
donationmessage/: CMakeLists.txt  donationmessage.cpp  donationmessage.h  donationmessage.json  donationmessage.notifyrc
geotimezoned/: CMakeLists.txt  geotimezonemodule.cpp  geotimezonemodule.h
kcms/colors/: colors.cpp
kcms/colors/editor/: kcolorschemeeditor.cpp
kcms/cursortheme/: kcmcursortheme.cpp
kcms/kfontinst/apps/: CMakeLists.txt
kcms/nightcolor/package/contents/ui/: HandleOnlySlider.qml  Timings.qml  main.qml
kcms/nightcolor/ui/: main.qml
kcms/nightlight/: enum.h  kcm.cpp  nightlightsettings.kcfg  nightlightsettings.kcfgc
kcms/nightlight/ui/: LocationsFixedView.qml  main.qml
kcms/notifications/: sourcesmodel.cpp
kcms/notifications/ui/: ApplicationConfiguration.qml
kcms/region_language/: kcmregionandlang.cpp  kcmregionandlang.h
kcms/region_language/ui/: main.qml
libcolorcorrect/: compositorcoloradaptor.cpp
libcolorcorrect/kded/: colorcorrectlocationupdater.json
libkmpris/: mpris2model.cpp  mpris2model.h  multiplexer.cpp  playercontainer.cpp
libkworkspace/: loginddbustypes.h
libnotificationmanager/: jobsmodel_p.cpp
libtaskmanager/: waylandtasksmodel.cpp
libtaskmanager/declarative/: taskmanagerplugin.cpp
logout-greeter/: CMakeLists.txt  greeter.cpp
lookandfeel/org.kde.breeze/contents/runcommand/: RunCommand.qml
runners/sessions/: sessionrunner.cpp
shell/: CMakeLists.txt  desktopview.cpp  desktopview.h  org.kde.plasmashell.desktop.cmake  osd.cpp  panelview.cpp  panelview.h  shellcorona.cpp
shell/autotests/: CMakeLists.txt
startkde/: CMakeLists.txt
wallpapers/image/imagepackage/contents/ui/: main.qml
wallpapers/image/plugin/: imageplugin.cpp
